style: update color to fix contrast issues

--- a/src/assets/styles/Contact.css
+++ b/src/assets/styles/Contact.css
@@ -66,7 +66,7 @@
 }
 
 .Contact-form button {
-  background-color: #007bff;
+  background-color: #006fe6;
   color: #fff;
   cursor: pointer;
 }
